infra/infisical/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "infisical.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infisical-infisical-standalone-infisical
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
# SecurityPolicy as it is internal
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: internal-infisical-route
spec:
  targetRefs:
    - group: "gateway.networking.k8s.io"
      name: infisical-route
      kind: HTTPRoute
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 100.64.0.0/10
            - 192.168.1.0/24
