infra/infisical/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "infisical.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infisical-infisical-standalone-infisical
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
